Include katex in project

--- a/package.json
+++ b/package.json
@@ -27,6 +27,9 @@
       }
     ]
   },
+  "files": [
+    "media/**"
+  ],
   "scripts": {
     "vscode:prepublish": "npm run compile",
     "compile": "tsc -p ./",
